# django4

./: .environment  .pip.app.yaml  .pipenv.app.yaml  .platform.app.yaml  .poetry.app.yaml  Pipfile  README.md  generate.sh  install-poetry.sh  requirements.txt
.platform/: applications.yaml  last.updated  pip.app.yaml  pipenv.app.yaml  poetry.app.yaml  services.yaml
basic_django/: connect.sh  pyproject.toml
basic_django/app/: settings.py
basic_django/pages/: urls.py  views.py
basic_django/templates/: base.html
files/: .gitignore  .platform.app.yaml  install-poetry.sh  run_local.sh
files/app/: settings.py  urls.py
files/pages/: urls.py
files/templates/: base.html
myapp/: settings.py
platformsh-django4/: .environment  .gitignore  .lando.upstream.yaml  docker-compose.yaml  pyproject.toml
platformsh-django4/pages/: views.py
platformsh-django4/templates/pages/: home.html
