[tool.poetry]
name = "platformsh-django4"
version = "0.1.0"
description = ""
authors = ["chadcarlson <chad.carlson@platform.sh>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
