[tool.poetry]
name = "platformsh-django4"
version = "0.1.0"
description = ""
authors = ["chadcarlson <chad.carlson@platform.sh>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-environ = "^0.8.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
daphne = "^3.0.2"
hypercorn = "^0.13.2"
psycopg2 = "^2.9.3"
mysqlclient = "^2.1.0"
pymemcache = "^3.5.2"
redis = "^4.2.2"
blackfire = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
